@@ -1,10 +1,10 @@
 [comment {-*- tcl -*- doctools manpage}]
-[manpage_begin smtpd n 1.2.1]
+[manpage_begin smtpd n 1.2.2]
 [copyright {Pat Thoyts <patthoyts@users.sourceforge.net>}]
 [moddesc   {Tcl SMTP Server Package}]
 [titledesc {Tcl SMTP server implementation}]
 [require Tcl 8.3]
-[require smtpd [opt 1.2.1]]
+[require smtpd [opt 1.2.2]]
 [description]
 [para]
 
